dark mode fixed

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -48,6 +48,9 @@ h1, h2, h3, h4 {
 a {
   color: {{ site.link-col | default: "#3b5998" }};
 }
+#lc {color: #3b5998;}
+#lc.dark {color:#808080;}
+#lc.light {color:#3b5998;}
 a:hover,
 a:focus {
   color: {{ site.hover-col | default: "#0085A1" }};
@@ -123,14 +126,16 @@ img {
 .switch {
   position: relative;
   display: inline-block;
-  width: 3rem;
-  height: 1.7rem;
+  width: 2.1rem;
+  height: 1.36rem;
+  
 }
 
 .switch input { 
   opacity: 0;
   width: 0;
   height: 0;
+  
 }
 
 .slider {
@@ -148,10 +153,10 @@ img {
 .slider:before {
   position: absolute;
   content: "";
-  height: 1.3rem;
-  width: 1.3rem;
+  height: 1rem;
+  width: 1rem;
   left: 0.25rem;
-  bottom: 0.21rem;
+  bottom: 0.18rem;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -166,9 +171,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(1.2rem);
-  -ms-transform: translateX(1.2rem);
-  transform: translateX(1.2rem);
+  -webkit-transform: translateX(.6rem);
+  -ms-transform: translateX(.6rem);
+  transform: translateX(.6rem);
 }
 
 /* Rounded sliders */
